--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ai-instagram-publisher"
+name = "socials"
 version = "0.1.0"
 description = "AI-powered Instagram content generator and publisher"
 requires-python = ">=3.8"
@@ -14,9 +14,6 @@ dependencies = [
     "apscheduler>=3.10.0",
     "python-telegram-bot>=20.0",
     "flask>=2.3.0",
-]
-authors = [
-    {name = "AI Instagram Publisher", email = "example@example.com"}
 ]
 readme = "README.md"
 license = {text = "MIT"}
