--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "socials"
 version = "0.1.0"
-description = "AI-powered Instagram content generator and publisher"
+description = "AI-powered social media content generator and publisher"
 requires-python = ">=3.8"
 dependencies = [
     "openai>=1.0.0",
@@ -66,7 +66,7 @@ classifiers = [
 include = ["generator*", "publisher*", "reviewer*", "scheduler*", "utils*"]
 
 [project.scripts]
-ai-instagram-publisher = "main:main"
+ai-socials = "main:main"
 
 # Testing configuration
 [tool.pytest.ini_options]
